--- a/authors.html
+++ b/authors.html
@@ -47,7 +47,7 @@
           </p>
         </li>
         <li>
-          <p><strong>Víctor Granda</strong>. Author. <a href="https://orcid.org/0000-0002-0469-1991" target="orcid.widget" aria-label="ORCID" class="external-link"><span class="fab fa-orcid orcid" aria-hidden="true"></span></a>
+          <p><strong>Nicolas Martin-StPaul</strong>. Author. <a href="https://orcid.org/0000-0001-7574-0108" target="orcid.widget" aria-label="ORCID" class="external-link"><span class="fab fa-orcid orcid" aria-hidden="true"></span></a>
           </p>
         </li>
         <li>
@@ -55,15 +55,7 @@
           </p>
         </li>
         <li>
-          <p><strong>Antoine Cabon</strong>. Author. <a href="https://orcid.org/0000-0001-6426-1726" target="orcid.widget" aria-label="ORCID" class="external-link"><span class="fab fa-orcid orcid" aria-hidden="true"></span></a>
-          </p>
-        </li>
-        <li>
-          <p><strong>Nicolas Martin-StPaul</strong>. Author. <a href="https://orcid.org/0000-0001-7574-0108" target="orcid.widget" aria-label="ORCID" class="external-link"><span class="fab fa-orcid orcid" aria-hidden="true"></span></a>
-          </p>
-        </li>
-        <li>
-          <p><strong>Arsène Druel</strong>. Author. <a href="https://orcid.org/0000-0002-3938-0085" target="orcid.widget" aria-label="ORCID" class="external-link"><span class="fab fa-orcid orcid" aria-hidden="true"></span></a>
+          <p><strong>Víctor Granda</strong>. Author. <a href="https://orcid.org/0000-0002-0469-1991" target="orcid.widget" aria-label="ORCID" class="external-link"><span class="fab fa-orcid orcid" aria-hidden="true"></span></a>
           </p>
         </li>
       </ul></div>
@@ -75,13 +67,13 @@
     </div>
 
 
-    <p>De Cáceres M, Granda V, Tovar A, Cabon A, Martin-StPaul N, Druel A (2024).
+    <p>De Cáceres M, Martin-StPaul N, Tovar A, Granda V (2024).
 <em>traits4models: From plant traits to model parameters</em>.
 R package version 0.1.0. 
 </p>
     <pre>@Manual{,
   title = {traits4models: From plant traits to model parameters},
-  author = {Miquel {De Cáceres} and Víctor Granda and Adriana Tovar and Antoine Cabon and Nicolas Martin-StPaul and Arsène Druel},
+  author = {Miquel {De Cáceres} and Nicolas Martin-StPaul and Adriana Tovar and Víctor Granda},
   year = {2024},
   note = {R package version 0.1.0},
 }</pre>
@@ -93,7 +85,7 @@ R package version 0.1.0.
 
 
       <footer><div class="copyright">
-  <p></p><p>Developed by Miquel De Cáceres, Víctor Granda, Adriana Tovar, Antoine Cabon, Nicolas Martin-StPaul, Arsène Druel.</p>
+  <p></p><p>Developed by Miquel De Cáceres, Nicolas Martin-StPaul, Adriana Tovar, Víctor Granda.</p>
 </div>
 
 <div class="pkgdown">
