--- a/index.html
+++ b/index.html
@@ -133,11 +133,9 @@
 <h2 data-toc-skip>Developers</h2>
 <ul class="list-unstyled">
 <li>Miquel De Cáceres <br><small class="roles"> Author, maintainer, copyright holder </small> <a href="https://orcid.org/0000-0001-7132-2080" target="orcid.widget" aria-label="ORCID" class="external-link"><span class="fab fa-orcid orcid" aria-hidden="true"></span></a> </li>
-<li>Víctor Granda <br><small class="roles"> Author </small> <a href="https://orcid.org/0000-0002-0469-1991" target="orcid.widget" aria-label="ORCID" class="external-link"><span class="fab fa-orcid orcid" aria-hidden="true"></span></a> </li>
-<li>Adriana Tovar <br><small class="roles"> Author </small>  </li>
-<li>Antoine Cabon <br><small class="roles"> Author </small> <a href="https://orcid.org/0000-0001-6426-1726" target="orcid.widget" aria-label="ORCID" class="external-link"><span class="fab fa-orcid orcid" aria-hidden="true"></span></a> </li>
 <li>Nicolas Martin-StPaul <br><small class="roles"> Author </small> <a href="https://orcid.org/0000-0001-7574-0108" target="orcid.widget" aria-label="ORCID" class="external-link"><span class="fab fa-orcid orcid" aria-hidden="true"></span></a> </li>
-<li>Arsène Druel <br><small class="roles"> Author </small> <a href="https://orcid.org/0000-0002-3938-0085" target="orcid.widget" aria-label="ORCID" class="external-link"><span class="fab fa-orcid orcid" aria-hidden="true"></span></a> </li>
+<li>Adriana Tovar <br><small class="roles"> Author </small>  </li>
+<li>Víctor Granda <br><small class="roles"> Author </small> <a href="https://orcid.org/0000-0002-0469-1991" target="orcid.widget" aria-label="ORCID" class="external-link"><span class="fab fa-orcid orcid" aria-hidden="true"></span></a> </li>
 </ul>
 </div>
 
@@ -154,7 +152,7 @@
 
       <footer><div class="copyright">
   <p></p>
-<p>Developed by Miquel De Cáceres, Víctor Granda, Adriana Tovar, Antoine Cabon, Nicolas Martin-StPaul, Arsène Druel.</p>
+<p>Developed by Miquel De Cáceres, Nicolas Martin-StPaul, Adriana Tovar, Víctor Granda.</p>
 </div>
 
 <div class="pkgdown">
